# otpauth-offline-backup

./: LICENSE  README.md  create_recovery.py  pyproject.toml  requirements.txt
otp/: __init__.py  account.py  backup.py  document.py
otp/templates/: template.html
